--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,14 @@
+
+
 {
-    "manifest_version": 2,
-    "name": "My Carbon Trigger",
-    "version": "0.1.0",
-    "permissions": ["<all_urls>"],
-    "background": {
-        "scripts": ["background.js"]
-    },
-    "browser_actions": {
-        "default_popup": "index.html"
-    }
+	"manifest_version": 2,
+	"name": "My Carbon Trigger",
+	"version": "0.1.0",
+	"permissions": ["<all_urls>"],
+	"background": {
+		"scripts": ["background.js"]
+	},
+	"browser_action": {
+		"default_popup": "index.html"
+	}
 }
